fix: trois jeux